--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = BIGTREE_SKR_PRO
 include_dir  = Marlin
 extra_configs =
     Marlin/config.ini
@@ -280,6 +280,6 @@ monitor_filters   = colorize, time, send_on_enter
 #
 [env:include_tree]
 platform         = atmelavr
-board            = megaatmega2560
+board            = BOARD_BTT_SKR_V1_1
 build_flags      = -c -H -std=gnu++11 -Wall -Os -D__MARLIN_FIRMWARE__
 build_src_filter = +<src/MarlinCore.cpp>
