--- a/platformio.ini
+++ b/platformio.ini
@@ -280,6 +280,6 @@ monitor_filters   = colorize, time, send_on_enter
 #
 [env:include_tree]
 platform         = atmelavr
-board            = BOARD_BTT_SKR_V1_1
+board            = BOARD_BTT_SKR_PRO_V1_1
 build_flags      = -c -H -std=gnu++11 -Wall -Os -D__MARLIN_FIRMWARE__
 build_src_filter = +<src/MarlinCore.cpp>
